--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
 
     // can be fixed later
     "max-len": ["off", 120],
-    "no-use-before-define": ["error", { "functions": true, "classes": false, "variables": true }],
+    "no-use-before-define": ["error", { "functions": false, "classes": false, "variables": true }],
     "no-shadow": ["error", {"builtinGlobals": false, "hoist": "functions", "allow": ["driver"]}],
     "no-restricted-syntax": [
       "error",
